--- a/page1.html
+++ b/page1.html
@@ -1,29 +1,47 @@
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Birthday Surprise - Page 1</title>
   <style>
-    body, html {
+    body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
+      height: 100vh;
       background: black;
       color: white;
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
       text-align: center;
+      overflow: hidden;
     }
 
-    /* center Slideshow */
+    h1 {
+      margin-top: 20px;
+      font-size: 22px;
+      color: #00e5ff;
+      text-shadow: 0 0 10px #00e5ff, 0 0 20px #00e5ff;
+    }
+
+    p {
+      font-size: 18px;
+      color: #ff66cc;
+      text-shadow: 0 0 8px #ff99cc;
+    }
+
+    /* Centered Slideshow Box */
     .slideshow {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 70%;
-      z-index: -1;
+      position: relative;
+      width: 300px;
+      height: 400px;
+      margin: 20px auto;
+      overflow: hidden;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.5);
     }
 
     .slideshow img {
@@ -33,6 +51,7 @@
       object-fit: cover;
       opacity: 0;
       animation: fade 36s infinite;
+      border-radius: 20px;
     }
 
     .slideshow img:nth-child(1) { animation-delay: 0s; }
@@ -50,22 +69,9 @@
       100% { opacity: 0; }
     }
 
-    h1 {
-      margin-top: 20px;
-      font-size: 24px;
-      color: #00e5ff;
-      text-shadow: 0 0 10px #00e5ff, 0 0 20px #00e5ff;
-    }
-
-    p {
-      margin: 10px 0;
-      font-size: 18px;
-      color: #ff66cc;
-      text-shadow: 0 0 8px #ff99cc;
-    }
-
+    /* Quiz */
     .quiz {
-      margin-top: 20px;
+      margin-bottom: 20px;
     }
     input[type="date"] {
       padding: 8px;
@@ -107,7 +113,10 @@
     <source src="Friend1.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- Slideshow -->
+  <!-- Top Text -->
+  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
+
+  <!-- Center Slideshow -->
   <div class="slideshow">
     <img src="Saree1.jpg" alt="">
     <img src="Saree2.jpg" alt="">
@@ -117,8 +126,7 @@
     <img src="Saree6.jpg" alt="">
   </div>
 
-  <!-- Text -->
-  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
+  <!-- Bottom Text -->
   <p>Thank you for being with me always di loosu 🤗</p>
 
   <!-- Quiz -->
