--- a/page1.html
+++ b/page1.html
@@ -2,64 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Birthday Surprise - Page 1</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      height: 100vh;
-      background: black;
+      background: #111;
       color: white;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
+      font-family: 'Arial', sans-serif;
       text-align: center;
       overflow: hidden;
     }
-
     h1 {
+      font-size: 28px;
       margin-top: 20px;
-      font-size: 22px;
-      color: #00e5ff;
-      text-shadow: 0 0 10px #00e5ff, 0 0 20px #00e5ff;
+      color: #00cfff;
+      text-shadow: 2px 2px 8px #000;
     }
-
-    p {
-      font-size: 18px;
-      color: #ff66cc;
-      text-shadow: 0 0 8px #ff99cc;
-    }
-
-    /* Centered Slideshow Box */
     .slideshow {
-      position: relative;
-      width: 300px;
+      width: 400px;
       height: 400px;
-      margin: 20px auto;
+      margin: 40px auto;
+      position: relative;
       overflow: hidden;
       border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.5);
+      box-shadow: 0 0 25px rgba(255,255,255,0.6);
     }
-
     .slideshow img {
-      position: absolute;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      position: absolute;
+      left: 0;
+      top: 0;
       opacity: 0;
-      animation: fade 36s infinite;
-      border-radius: 20px;
+      animation: fade 18s infinite;
     }
-
     .slideshow img:nth-child(1) { animation-delay: 0s; }
-    .slideshow img:nth-child(2) { animation-delay: 6s; }
-    .slideshow img:nth-child(3) { animation-delay: 12s; }
-    .slideshow img:nth-child(4) { animation-delay: 18s; }
-    .slideshow img:nth-child(5) { animation-delay: 24s; }
-    .slideshow img:nth-child(6) { animation-delay: 30s; }
+    .slideshow img:nth-child(2) { animation-delay: 3s; }
+    .slideshow img:nth-child(3) { animation-delay: 6s; }
+    .slideshow img:nth-child(4) { animation-delay: 9s; }
+    .slideshow img:nth-child(5) { animation-delay: 12s; }
+    .slideshow img:nth-child(6) { animation-delay: 15s; }
 
     @keyframes fade {
       0% { opacity: 0; }
@@ -69,99 +52,129 @@
       100% { opacity: 0; }
     }
 
-    /* Quiz */
+    .bottom-text {
+      font-size: 20px;
+      margin-top: 10px;
+      color: #ffda6a;
+      text-shadow: 1px 1px 5px #000;
+    }
+
     .quiz {
-      margin-bottom: 20px;
+      margin-top: 30px;
+      font-size: 18px;
     }
     input[type="date"] {
       padding: 8px;
-      border-radius: 6px;
-      border: none;
       font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      margin-top: 10px;
     }
     button {
-      padding: 8px 16px;
-      margin-left: 10px;
-      background: cyan;
-      border: none;
-      border-radius: 6px;
+      margin-top: 15px;
+      padding: 10px 20px;
       font-size: 16px;
+      background: #00cfff;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
+      color: white;
+      font-weight: bold;
     }
     button:hover {
-      background: #00bcd4;
+      background: #008ecc;
     }
-
-    /* Confetti */
-    .confetti {
+    #confetti-canvas {
       position: fixed;
-      width: 10px;
-      height: 10px;
-      top: -10px;
-      animation: fall 5s linear infinite;
-    }
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(100vh) rotate(720deg); }
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      pointer-events: none;
+      z-index: -1;
     }
   </style>
 </head>
 <body>
+  <h1>Wishing you Happiest Birthday My Bestest Friend Forever 💙🫂</h1>
 
-  <!-- Background Music -->
-  <audio autoplay loop>
-    <source src="Friend1.mp3" type="audio/mpeg">
-  </audio>
-
-  <!-- Top Text -->
-  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
-
-  <!-- Center Slideshow -->
   <div class="slideshow">
-    <img src="Saree1.jpg" alt="">
-    <img src="Saree2.jpg" alt="">
-    <img src="Saree3.jpg" alt="">
-    <img src="Saree4.jpg" alt="">
-    <img src="Saree5.jpg" alt="">
-    <img src="Saree6.jpg" alt="">
+    <img src="Saree1.jpg" alt="Photo 1">
+    <img src="Saree2.jpg" alt="Photo 2">
+    <img src="Saree3.jpg" alt="Photo 3">
+    <img src="Saree4.jpg" alt="Photo 4">
+    <img src="Saree5.jpg" alt="Photo 5">
+    <img src="Saree6.jpg" alt="Photo 6">
   </div>
 
-  <!-- Bottom Text -->
-  <p>Thank you for being with me always di loosu 🤗</p>
+  <div class="bottom-text">
+    Thank you for being with me always di loosu 🤗
+  </div>
 
-  <!-- Quiz -->
   <div class="quiz">
-    <label for="dob">Enter your DOB 🎂:</label>
-    <input type="date" id="dob">
+    <p>Enter your DOB to move next page 🎂</p>
+    <input type="date" id="dobInput">
+    <br>
     <button onclick="checkDOB()">Submit</button>
+    <p id="result"></p>
   </div>
+
+  <canvas id="confetti-canvas"></canvas>
 
   <script>
-    // Confetti generator
-    function createConfetti() {
-      for (let i = 0; i < 40; i++) {
-        let confetti = document.createElement('div');
-        confetti.classList.add('confetti');
-        confetti.style.left = Math.random() * 100 + 'vw';
-        confetti.style.backgroundColor = `hsl(${Math.random() * 360},100%,50%)`;
-        confetti.style.animationDuration = (Math.random() * 3 + 2) + 's';
-        document.body.appendChild(confetti);
-      }
-    }
+    // Correct DOB (format: yyyy-mm-dd)
+    const correctDOB = "2003-10-07"; // <-- change this to her actual DOB
 
-    // Quiz DOB check
     function checkDOB() {
-      const correctDOB = "2003-10-07"; // her DOB YYYY-MM-DD
-      const enteredDOB = document.getElementById("dob").value;
-      if (enteredDOB === correctDOB) {
-        alert("🎉 Correct! Moving to next page...");
-        window.location.href = "page2.html"; 
+      const input = document.getElementById("dobInput").value;
+      const result = document.getElementById("result");
+      if (input === correctDOB) {
+        result.innerHTML = "<span style='color:lightgreen;'>Correct! 🎉</span>";
+        setTimeout(() => { window.location.href = "page2.html"; }, 1200);
       } else {
-        alert("❌ Wrong DOB! Try again 🤭");
+        result.innerHTML = "<span style='color:red;'>Oops! Try again ❌</span>";
       }
     }
 
-    createConfetti();
+    // Simple confetti effect
+    const canvas = document.getElementById('confetti-canvas');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    let confetti = [];
+    for (let i=0; i<200; i++) {
+      confetti.push({
+        x: Math.random()*canvas.width,
+        y: Math.random()*canvas.height,
+        r: Math.random()*6+2,
+        d: Math.random()*10+5,
+        color: "hsl(" + Math.random()*360 + ",100%,50%)",
+        tilt: Math.random()*10-10
+      });
+    }
+
+    function drawConfetti() {
+      ctx.clearRect(0,0,canvas.width,canvas.height);
+      confetti.forEach(p => {
+        ctx.beginPath();
+        ctx.fillStyle = p.color;
+        ctx.arc(p.x, p.y, p.r, 0, Math.PI*2, true);
+        ctx.fill();
+      });
+      updateConfetti();
+    }
+
+    function updateConfetti() {
+      confetti.forEach(p => {
+        p.y += Math.cos(p.d) + 1 + p.r/2;
+        p.x += Math.sin(p.d);
+        if (p.y > canvas.height) {
+          p.x = Math.random()*canvas.width;
+          p.y = -10;
+        }
+      });
+    }
+
+    setInterval(drawConfetti, 20);
   </script>
 </body>
 </html>
