--- a/page1.html
+++ b/page1.html
@@ -14,24 +14,24 @@
       overflow: hidden;
     }
     h1 {
-      font-size: 28px;
+      font-size: 30px;
       margin-top: 20px;
       color: #00cfff;
       text-shadow: 2px 2px 8px #000;
     }
     .slideshow {
-      width: 600px;   /* bigger width */
-      height: 500px;  /* bigger height */
+      width: 800px;   /* much bigger width */
+      height: 600px;  /* much bigger height */
       margin: 30px auto;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
-      box-shadow: 0 0 25px rgba(255,255,255,0.6);
+      box-shadow: 0 0 30px rgba(255,255,255,0.7);
     }
     .slideshow img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* show full photo without cutting */
+      object-fit: cover; /* keeps full photo, fills box */
       position: absolute;
       left: 0;
       top: 0;
@@ -54,14 +54,14 @@
     }
 
     .bottom-text {
-      font-size: 20px;
-      margin-top: 10px;
+      font-size: 22px;
+      margin-top: 15px;
       color: #ffda6a;
       text-shadow: 1px 1px 5px #000;
     }
 
     .quiz {
-      margin-top: 20px;
+      margin-top: 25px;
       font-size: 18px;
     }
     input[type="date"] {
@@ -129,7 +129,7 @@
       const result = document.getElementById("result");
       if (input === correctDOB) {
         result.innerHTML = "<span style='color:lightgreen;'>Correct! 🎉</span>";
-        setTimeout(() => { window.location.href = "page2.html"; }, 1200);
+        setTimeout(() => { window.location.href = 'page2.html'; }, 1200);
       } else {
         result.innerHTML = "<span style='color:red;'>Oops! Try again ❌</span>";
       }
