--- a/page2.html
+++ b/page2.html
@@ -2,139 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Birthday Surprise Page 3</title>
+  <title>Birthday Surprise - Page 2</title>
   <style>
     body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  background: url('Bg.jpg') no-repeat center center;
-  background-size: cover;     /* Cover full screen */
-  background-attachment: fixed;
-  background-position: center;
-  height: 100vh;              /* Full height */
-  width: 100vw;               /* Full width */
-  color: white;
-  text-align: center;
-  overflow: hidden;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('Bg.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      text-align: center;
+      overflow: hidden;
+    }
+    .container {
+      position: relative;
+      z-index: 2;
+      padding: 20px;
     }
     h1 {
+      margin-top: 30px;
+      font-size: 36px;
+      color: #FFD700;
+      text-shadow: 2px 2px 4px #000;
+    }
+    .quiz-box {
       margin-top: 40px;
-      font-size: 42px;
-      text-shadow: 2px 2px 6px black;
     }
-    h2 {
-      margin-top: 20px;
-      font-size: 26px;
-      text-shadow: 1px 1px 4px black;
-    }
-    .quiz {
-      margin-top: 40px;
-      font-size: 22px;
-      background: rgba(0,0,0,0.4);
-      padding: 20px;
-      border-radius: 15px;
-      display: inline-block;
-    }
-    textarea {
-      width: 80%;
-      height: 100px;
-      font-size: 22px;
-      border-radius: 10px;
+    input {
       padding: 10px;
+      font-size: 18px;
+      width: 80%;
+      max-width: 400px;
+      border-radius: 8px;
       border: none;
-      text-align: center;
     }
     button {
+      padding: 10px 20px;
       margin-top: 15px;
-      padding: 12px 24px;
-      font-size: 20px;
-      background: #00c853;
+      font-size: 18px;
+      background-color: #ff69b4;
       color: white;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
     }
     button:hover {
-      background: #009624;
+      background-color: #ff1493;
     }
-
-    /* Shake animation */
-    .shake { animation: shake 0.5s; }
-    @keyframes shake {
-      0%, 100% { transform: translateX(0); }
-      20%, 60% { transform: translateX(-10px); }
-      40%, 80% { transform: translateX(10px); }
-    }
-
-    /* Floating 🌎 emojis */
-    .emoji {
-      position: absolute;
-      bottom: -50px;
-      font-size: 45px;
-      animation: floatUp 12s linear infinite;
-      opacity: 0.9;
-    }
-    @keyframes floatUp {
-      0% { transform: translateY(0) rotate(0deg); opacity: 0.9; }
-      100% { transform: translateY(-120vh) rotate(360deg); opacity: 0; }
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 1;
     }
   </style>
 </head>
 <body>
-  <h1>Ni unnoda World 🌎 ha pakanuma??...</h1>
-  <h2>Pakkanum naa 🌎 emoji ah intha box la more than 10 times type pannu 😍</h2>
-
-  <div class="quiz" id="quizBox">
-    <textarea id="answer" placeholder="Type 🌎 here..."></textarea><br>
-    <button onclick="checkAnswer()">Submit</button>
+  <canvas id="confetti"></canvas>
+  <div class="container">
+    <h1>🎂🎊😚🤗💙🌍💗❤️‍🩹</h1>
+    <div class="quiz-box">
+      <p>Ni unnoda World 🌎 ha pakanuma??</p>
+      <p>Pakkanum naa kila Answer box la (🌎) intha world emoji more than 10 times type pannu.</p>
+      <input type="text" id="answer" placeholder="Type answer here...">
+      <br>
+      <button onclick="checkAnswer()">Submit</button>
+    </div>
   </div>
 
-  <!-- Confetti script -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-
-  <!-- Floating 🌎 Emojis -->
   <script>
-    function createEmoji() {
-      const emoji = document.createElement("div");
-      emoji.classList.add("emoji");
-      emoji.innerText = "🌎";
-      emoji.style.left = Math.random() * 100 + "vw";
-      emoji.style.fontSize = (35 + Math.random() * 35) + "px";
-      emoji.style.animationDuration = (8 + Math.random() * 5) + "s";
-      document.body.appendChild(emoji);
-      setTimeout(() => { emoji.remove(); }, 13000);
-    }
-    setInterval(createEmoji, 500);
-
     function checkAnswer() {
-      const input = document.getElementById("answer").value;
-      const worldCount = (input.match(/🌎/g) || []).length;
-
-      if(worldCount >= 10){
-        // Big confetti blast
-        for(let i=0; i<5; i++){
-          setTimeout(() => {
-            confetti({
-              particleCount: 300,
-              spread: 160,
-              startVelocity: 60,
-              scalar: 1.2,
-              origin: { y: 0.7 }
-            });
-          }, i * 400);
-        }
-        setTimeout(() => {
-          window.location.href = "page4.html";
-        }, 3000);
+      const input = document.getElementById('answer').value.trim();
+      const count = (input.match(/🌎/g) || []).length;
+      if (count > 10) {
+        alert("Correct Answer! Moving to next page 🎉");
+        window.location.href = "https://gowda524-dotcom.github.io/My-Panda/page3.html";
       } else {
-        const box = document.getElementById("quizBox");
-        box.classList.add("shake");
-        setTimeout(() => box.classList.remove("shake"), 500);
-        alert("Oops! 🌎 emoji should be more than 10 times 😅");
+        alert("Try again! You need more 🌎 emojis.");
       }
     }
+
+    // Confetti
+    const canvas = document.getElementById('confetti');
+    const ctx = canvas.getContext('2d');
+    let particles = [];
+    let W, H;
+
+    function resizeCanvas() {
+      W = canvas.width = window.innerWidth;
+      H = canvas.height = window.innerHeight;
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    function randomEmoji() {
+      return "🌎";
+    }
+
+    function createParticle() {
+      return {
+        x: Math.random() * W,
+        y: Math.random() * H - H,
+        r: 20,
+        d: Math.random() * 2 + 1,
+        emoji: randomEmoji(),
+      };
+    }
+
+    for (let i = 0; i < 40; i++) {
+      particles.push(createParticle());
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, W, H);
+      ctx.font = "24px Arial";
+      ctx.textAlign = "center";
+      ctx.textBaseline = "middle";
+
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
+        ctx.fillText(p.emoji, p.x, p.y);
+      }
+      update();
+    }
+
+    function update() {
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
+        p.y += p.d;
+        if (p.y > H) {
+          particles[i] = createParticle();
+          particles[i].y = 0;
+        }
+      }
+    }
+
+    setInterval(draw, 33);
   </script>
 </body>
 </html>
