--- a/page3.html
+++ b/page3.html
@@ -2,86 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Page 3</title>
+  <title>Birthday Surprise - Page 3</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      text-align: center;
+      font-family: Arial, sans-serif;
       background: #000;
       color: white;
-      font-family: Arial, sans-serif;
-      overflow-x: hidden;
+      text-align: center;
+      overflow: hidden;
     }
-
     h1 {
       margin-top: 20px;
-      font-size: 28px;
-      color: #ff66cc;
-      text-shadow: 2px 2px 5px black;
+      font-size: 36px;
+      color: #FFD700;
+      text-shadow: 2px 2px 6px #000;
     }
-
     .slideshow {
-      width: 90%;
-      max-width: 600px;
-      height: 400px;
-      margin: 20px auto;
+      margin: 30px auto;
+      width: 80%;
+      max-width: 900px;
+      height: 500px;
+      position: relative;
       overflow: hidden;
       border-radius: 15px;
-      box-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
+      box-shadow: 0px 0px 20px rgba(255,255,255,0.6);
     }
-
     .slideshow img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: none;
+      position: absolute;
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
     }
-
     .slideshow img.active {
-      display: block;
+      opacity: 1;
     }
-
     .quiz-box {
       margin-top: 20px;
     }
-
-    textarea {
-      width: 80%;
-      height: 80px;
-      font-size: 18px;
-      border-radius: 10px;
+    input {
       padding: 10px;
-    }
-
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
       font-size: 18px;
+      width: 80%;
+      max-width: 400px;
+      border-radius: 8px;
       border: none;
-      border-radius: 10px;
-      background: #ff3399;
+    }
+    button {
+      padding: 10px 20px;
+      margin-top: 15px;
+      font-size: 18px;
+      background-color: #ff69b4;
       color: white;
+      border: none;
+      border-radius: 8px;
       cursor: pointer;
     }
-
-    /* Floating kiss emojis */
-    .emoji {
-      position: fixed;
-      font-size: 30px;
-      animation: floatUp 6s linear infinite;
-      bottom: 0;
+    button:hover {
+      background-color: #ff1493;
     }
-
-    @keyframes floatUp {
-      0% { transform: translateY(0) scale(1); opacity: 1; }
-      100% { transform: translateY(-100vh) scale(1.5); opacity: 0; }
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 1;
     }
   </style>
 </head>
 <body>
-
-  <h1>Happy Birthday #Magle😘</h1>
+  <canvas id="confetti"></canvas>
+  <h1>Happy Birthday #Magle 😘</h1>
 
   <!-- Slideshow -->
   <div class="slideshow">
@@ -92,52 +85,98 @@
     <img src="Amma5.jpg">
   </div>
 
-  <!-- Song -->
+  <!-- Background song -->
   <audio autoplay loop>
     <source src="Amma.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- Quiz -->
+  <!-- Quiz Box -->
   <div class="quiz-box">
-    <p>Un Amma ku... Love you Amma🌎 ... apro more than 10 kiss emoji 😘 type pannu👇</p>
-    <textarea id="answer" placeholder="Type here..."></textarea><br>
+    <p>Un Amma ku... Love you Amma 🌎</p>
+    <p>Apram more than 10 kisses 😘 type pannu next page ku pogum 💕</p>
+    <input type="text" id="answer" placeholder="Type here...">
+    <br>
     <button onclick="checkAnswer()">Submit</button>
   </div>
 
   <script>
     // Slideshow
-    let slides = document.querySelectorAll('.slideshow img');
+    let slides = document.querySelectorAll(".slideshow img");
     let index = 0;
     setInterval(() => {
-      slides[index].classList.remove('active');
+      slides[index].classList.remove("active");
       index = (index + 1) % slides.length;
-      slides[index].classList.add('active');
+      slides[index].classList.add("active");
     }, 3000);
 
     // Quiz check
     function checkAnswer() {
-      const input = document.getElementById("answer").value;
-      const kissCount = (input.match(/😘/g) || []).length;
-      if (input.includes("Love you Amma🌎") && kissCount > 10) {
-        alert("Correct Answer 🎉😍 Moving to Next Page...");
-        window.location.href = "page4.html";
+      const input = document.getElementById('answer').value.trim();
+      const count = (input.match(/😘/g) || []).length;
+      if (count > 10) {
+        alert("Correct! Moving to next page 🎉");
+        window.location.href = "https://gowda524-dotcom.github.io/My-Panda/page4.html";
       } else {
-        alert("Try again 😘 Add more kisses and include text!");
+        alert("Type more 😘 emojis to continue!");
       }
     }
 
-    // Floating kiss emojis
-    function createEmoji() {
-      const emoji = document.createElement('div');
-      emoji.className = 'emoji';
-      emoji.innerText = '😘';
-      emoji.style.left = Math.random() * window.innerWidth + 'px';
-      document.body.appendChild(emoji);
+    // Floating + Confetti
+    const canvas = document.getElementById('confetti');
+    const ctx = canvas.getContext('2d');
+    let particles = [];
+    let W, H;
 
-      setTimeout(() => emoji.remove(), 6000);
+    function resizeCanvas() {
+      W = canvas.width = window.innerWidth;
+      H = canvas.height = window.innerHeight;
     }
-    setInterval(createEmoji, 600);
-  </script>
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
 
+    function randomEmoji() {
+      return "😘";
+    }
+
+    function createParticle() {
+      return {
+        x: Math.random() * W,
+        y: Math.random() * H - H,
+        r: 20,
+        d: Math.random() * 2 + 1,
+        emoji: randomEmoji(),
+      };
+    }
+
+    for (let i = 0; i < 50; i++) {
+      particles.push(createParticle());
+    }
+
+    function draw() {
+      ctx.clearRect(0, 0, W, H);
+      ctx.font = "26px Arial";
+      ctx.textAlign = "center";
+      ctx.textBaseline = "middle";
+
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
+        ctx.fillText(p.emoji, p.x, p.y);
+      }
+      update();
+    }
+
+    function update() {
+      for (let i = 0; i < particles.length; i++) {
+        let p = particles[i];
+        p.y += p.d;
+        if (p.y > H) {
+          particles[i] = createParticle();
+          particles[i].y = 0;
+        }
+      }
+    }
+
+    setInterval(draw, 33);
+  </script>
 </body>
 </html>
