--- a/page5.html
+++ b/page5.html
@@ -2,38 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Surprise</title>
+  <title>Surprise Page</title>
   <style>
     body {
       margin: 0;
-      height: 100vh;
+      padding: 0;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       align-items: center;
-      background: black;
+      justify-content: flex-start;
+      height: 100vh;
+      background: #000;
       overflow: hidden;
       color: white;
       font-family: Arial, sans-serif;
+      text-align: center;
     }
 
     /* Top text */
     .top-text {
-      font-size: 22px;
-      font-weight: bold;
-      text-align: center;
       margin-top: 20px;
-      line-height: 1.6;
-      z-index: 10;
+      font-weight: bold;
+      font-size: 22px;
+      line-height: 1.6em;
+      z-index: 2;
     }
 
     /* Cube container */
-    .scene {
+    .cube-container {
+      perspective: 1200px;
       width: 450px;
       height: 450px;
-      perspective: 1500px;
-      margin-top: 20px;
+      margin: 20px 0;
     }
 
     .cube {
@@ -41,25 +41,28 @@
       height: 100%;
       position: relative;
       transform-style: preserve-3d;
-      animation: rotate 12s infinite linear;
+      animation: rotate 25s infinite linear; /* slower rotation */
     }
 
-    .cube-face {
+    .face {
       position: absolute;
       width: 450px;
       height: 450px;
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
+      backface-visibility: hidden;
     }
 
-    /* Cube faces */
-    .cube-face.front  { transform: rotateY(0deg) translateZ(225px); }
-    .cube-face.back   { transform: rotateY(180deg) translateZ(225px); }
-    .cube-face.right  { transform: rotateY(90deg) translateZ(225px); }
-    .cube-face.left   { transform: rotateY(-90deg) translateZ(225px); }
-    .cube-face.top    { transform: rotateX(90deg) translateZ(225px); }
-    .cube-face.bottom { transform: rotateX(-90deg) translateZ(225px); }
+    .face img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .front  { transform: rotateY(0deg) translateZ(225px); }
+    .back   { transform: rotateY(180deg) translateZ(225px); }
+    .right  { transform: rotateY(90deg) translateZ(225px); }
+    .left   { transform: rotateY(-90deg) translateZ(225px); }
+    .top    { transform: rotateX(90deg) translateZ(225px); }
+    .bottom { transform: rotateX(-90deg) translateZ(225px); }
 
     @keyframes rotate {
       from { transform: rotateX(0deg) rotateY(0deg); }
@@ -68,25 +71,23 @@
 
     /* Quiz section */
     .quiz {
-      text-align: center;
-      font-weight: bold;
       margin-top: 20px;
-      z-index: 10;
+      margin-bottom: 30px;
+      z-index: 2;
     }
 
     .quiz input {
       padding: 8px;
-      border-radius: 5px;
       border: none;
-      margin-top: 10px;
+      border-radius: 5px;
+      margin-right: 5px;
     }
 
     .quiz button {
-      padding: 8px 15px;
-      margin-left: 10px;
+      padding: 8px 14px;
       border: none;
       border-radius: 5px;
-      background: #ff007f;
+      background: hotpink;
       color: white;
       font-weight: bold;
       cursor: pointer;
@@ -95,16 +96,15 @@
     /* Floating emojis */
     .emoji {
       position: absolute;
-      font-size: 28px;
-      animation: float 12s infinite;
+      font-size: 26px;
+      animation: float 8s linear infinite;
     }
 
     @keyframes float {
       0%   { transform: translateY(100vh) scale(1); opacity: 1; }
-      100% { transform: translateY(-120vh) scale(1.5); opacity: 0; }
+      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
     }
 
-    /* Fireworks canvas */
     canvas {
       position: fixed;
       top: 0;
@@ -112,131 +112,103 @@
       width: 100%;
       height: 100%;
       pointer-events: none;
-      z-index: 5;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
-
   <!-- Song -->
   <audio autoplay loop>
     <source src="First.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- Top Text -->
+  <!-- Top text -->
   <div class="top-text">
-    Namma 1st Selfie loosuu 😘🙈 <br>
+    Namma 1st Selfie loosuu 😚🙈 <br>
     Always blessed to have you in my Life 🤗 <br>
-    Lov uuu ❤️‍🩹
+    Lov uuu 😚 always...
   </div>
 
   <!-- Cube -->
-  <div class="scene">
+  <div class="cube-container">
     <div class="cube">
-      <div class="cube-face front"  style="background-image: url('F1.jpg');"></div>
-      <div class="cube-face back"   style="background-image: url('F2.jpg');"></div>
-      <div class="cube-face right"  style="background-image: url('F3.jpg');"></div>
-      <div class="cube-face left"   style="background-image: url('F4.jpg');"></div>
-      <div class="cube-face top"    style="background-image: url('F5.jpg');"></div>
-      <div class="cube-face bottom" style="background-image: url('F6.jpg');"></div>
+      <div class="face front"><img src="F1.jpg"></div>
+      <div class="face back"><img src="F2.jpg"></div>
+      <div class="face right"><img src="F3.jpg"></div>
+      <div class="face left"><img src="F4.jpg"></div>
+      <div class="face top"><img src="F5.jpg"></div>
+      <div class="face bottom"><img src="F6.jpg"></div>
     </div>
   </div>
 
   <!-- Quiz -->
   <div class="quiz">
-    Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂 <br>
-    <input type="text" placeholder="Type here...">
-    <button>Submit</button>
+    <p>Next page ku porathukku unnoda loosu ku more than 10 hug kudu 🫂</p>
+    <input id="answer" type="text" placeholder="Type here...">
+    <button onclick="checkAnswer()">Submit</button>
   </div>
 
-  <!-- Canvas for Fireworks -->
-  <canvas id="fireworks"></canvas>
+  <!-- Fireworks & confetti -->
+  <canvas id="confetti"></canvas>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
   <script>
     // Floating emojis
-    const emojis = ["🙈", "😚", "💎", "🤗", "🫂", "❤️‍🩹"];
-    for (let i = 0; i < 20; i++) {
+    const emojis = ["💙","🤗","😚","🫂","💎","❤️‍🩹","🙈"];
+    function createEmoji() {
       const emoji = document.createElement("div");
       emoji.className = "emoji";
-      emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+      emoji.innerText = emojis[Math.floor(Math.random() * emojis.length)];
       emoji.style.left = Math.random() * 100 + "vw";
-      emoji.style.animationDuration = (8 + Math.random() * 6) + "s";
-      emoji.style.fontSize = (24 + Math.random() * 20) + "px";
+      emoji.style.fontSize = (20 + Math.random() * 20) + "px";
+      emoji.style.animationDuration = (6 + Math.random() * 4) + "s";
       document.body.appendChild(emoji);
+      setTimeout(() => emoji.remove(), 10000);
+    }
+    setInterval(createEmoji, 800);
+
+    // Quiz answer check
+    function checkAnswer() {
+      const ans = document.getElementById("answer").value.trim();
+      const correct = "🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂";
+      if (ans === correct) {
+        alert("Correct! 🎉 Moving to next page...");
+        window.location.href = "nextpage.html"; // change target page
+      } else {
+        alert("Oops! Try again 😊");
+      }
     }
 
-    // Confetti burst when page loads
-    window.onload = () => {
-      confetti({
-        particleCount: 200,
-        spread: 150,
-        origin: { y: 0.6 }
-      });
-      fireworkEffect();
-    };
-
-    // Fireworks effect
-    const canvas = document.getElementById('fireworks');
-    const ctx = canvas.getContext('2d');
+    // Confetti + fireworks
+    const canvas = document.getElementById("confetti");
+    const ctx = canvas.getContext("2d");
     canvas.width = window.innerWidth;
     canvas.height = window.innerHeight;
+    const pieces = [];
+    const numberOfPieces = 150;
 
-    class Firework {
-      constructor(x, y, colors) {
-        this.x = x;
-        this.y = y;
-        this.colors = colors;
-        this.particles = [];
-        for (let i = 0; i < 50; i++) {
-          this.particles.push({
-            x: x,
-            y: y,
-            angle: Math.random() * 2 * Math.PI,
-            speed: Math.random() * 5 + 2,
-            radius: Math.random() * 2 + 1,
-            life: 100
-          });
-        }
-      }
-      draw() {
-        this.particles.forEach(p => {
-          ctx.beginPath();
-          ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-          ctx.fillStyle = this.colors[Math.floor(Math.random() * this.colors.length)];
-          ctx.fill();
-        });
-      }
-      update() {
-        this.particles.forEach(p => {
-          p.x += Math.cos(p.angle) * p.speed;
-          p.y += Math.sin(p.angle) * p.speed;
-          p.life--;
-        });
-      }
-    }
-
-    let fireworks = [];
-    function fireworkEffect() {
-      setInterval(() => {
-        const x = Math.random() * canvas.width;
-        const y = Math.random() * canvas.height / 2;
-        fireworks.push(new Firework(x, y, ["red", "yellow", "blue", "green", "pink", "purple", "orange"]));
-      }, 1200);
-      animate();
-    }
-
-    function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      fireworks.forEach((fw, index) => {
-        fw.update();
-        fw.draw();
-        fw.particles = fw.particles.filter(p => p.life > 0);
-        if (fw.particles.length === 0) fireworks.splice(index, 1);
+    for (let i = 0; i < numberOfPieces; i++) {
+      pieces.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        radius: Math.random() * 6 + 2,
+        color: `hsl(${Math.random() * 360}, 100%, 50%)`,
+        speed: Math.random() * 3 + 2
       });
-      requestAnimationFrame(animate);
     }
+
+    function update() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      pieces.forEach(p => {
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, p.radius, 0, 2 * Math.PI);
+        ctx.fillStyle = p.color;
+        ctx.fill();
+        p.y += p.speed;
+        if (p.y > canvas.height) p.y = 0;
+      });
+      requestAnimationFrame(update);
+    }
+    update();
   </script>
 </body>
 </html>
